# Projekt

./: .gitignore  CMakeLists.txt  README.md  org.kde.projekt.desktop
src/: CMakeLists.txt  assets.qrc  main.cpp
src/qml/: CMakeLists.txt
